fixed map spacing

--- a/Skeleton-Client/src/BaseMap.css
+++ b/Skeleton-Client/src/BaseMap.css
@@ -7,6 +7,6 @@
 }
 
 .map-wrapper{
-    width: 60vw;
-    height: 35vh;
+    width: 50vw;
+    height: 50vh;
 }
